Fix alignment in the header sub between img and text

--- a/styles.css
+++ b/styles.css
@@ -42,17 +42,32 @@ a {
     font-size: 48px;
     font-weight: 900;
     color:#F9FAF8;
+    
+    
 }
 
 .header-subtext, a {
     font-size: 18px;
     color: #E5E7EB;
+    
+    
 }
 
 .header-sub {
     display: flex;
     justify-content: center;
+    
 }
+
+.header-information {
+    width: 400px;
+    flex-wrap: wrap;
+    margin-right: 32px;
+}
+
+
+
+
 
 
 
